# joseph0x45.github.io

./: custom.html  index.html  math-prep.html  sponsors.html  styles.css
.github/workflows/: deploy.yaml
api/json/: pet.json
api/txt/: lorem.txt
challenges/: february_2025.md
css/: style.css
nutrition/: index.md
posts/: index.html  parsing_sql_with_C.html  prototype-the-damn-thing.html  test.md
posts/get-started-with-pico-w-c/: CMakeLists.txt  index.html
project-nutrition/: index.md
projects/: index.html
sponsors/: index.html
